Project

General

Profile

Bug #55327

kclient: BUG: kernel NULL pointer dereference, address: 0000000000000008

Added by Xiubo Li almost 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Crash signature (v1):
Crash signature (v2):

Description


Related issues

Related to Linux kernel client - Bug #53809: cephfs: fsync on small directory takes multiple seconds Resolved
Related to CephFS - Bug #55329: qa: add test case for fsync crash issue Resolved

History

#1 Updated by Xiubo Li almost 2 years ago

  • Related to Bug #53809: cephfs: fsync on small directory takes multiple seconds added

#2 Updated by Xiubo Li almost 2 years ago

  • Status changed from New to In Progress

#4 Updated by Xiubo Li almost 2 years ago

  • Status changed from In Progress to Fix Under Review

#5 Updated by Xiubo Li almost 2 years ago

I added on test case for this issue in https://tracker.ceph.com/issues/55329.

#6 Updated by Xiubo Li almost 2 years ago

  • Related to Bug #55329: qa: add test case for fsync crash issue added

#8 Updated by Xiubo Li almost 2 years ago

  • Status changed from Fix Under Review to Resolved

Also available in: Atom PDF